syntax = "proto3";

option go_package = "/sandbox";

package sandbox;

service SandboxService {
  rpc UnaryCall(Request) returns (Response);
  rpc ServerStreamCall(Request) returns (stream Response) {}
  rpc ClientStreamCall(stream Request) returns (Response) {}
  rpc BidiStreamCall(stream Request) returns (stream Response) {}
}

message Request {
  string message = 1;
}

message Response {
  string reply = 1;
}